kubernetes/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: searchpe
      provider: fabric8
      group: io.searchpe
    name: searchpe
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: searchpe
      provider: fabric8
      group: io.searchpe
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: searchpe
      provider: fabric8
      group: io.searchpe
    name: searchpe
  spec:
    replicas: 1
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        labels:
          app: searchpe
          provider: fabric8
          group: io.searchpe
      spec:
        containers:
        - env:
          - name: JAVA_APP_DIR
            value: /deployments
          - name: JAVA_OPTIONS
            value: -Dswarm.project.stage.file=file:///deployments/config/searchpe-stages.yml -Dswarm.project.stage=production-mysql-peru
          - name: GC_MAX_METASPACE_SIZE
            value: "250"
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: searchpe/searchpe:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          name: searchpe
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /deployments/config
            name: searchpe-config
        volumes:
        - name: searchpe-config
          secret:
            secretName: searchpe-config
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: searchpe
      provider: fabric8
      group: io.searchpe
    name: searchpe
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: searchpe
